More Rule page components - Table now renders - Fixed game title navbar font - larger card zone card and uses svg - Added Jump section to skeleton page   - Currenty disabled due to invalid mobile format

--- a/src/app/css/navBar.module.css
+++ b/src/app/css/navBar.module.css
@@ -41,6 +41,7 @@
 .container > h2 {
   margin-bottom: 0;
   margin-left: 1.8rem;
+  text-align: center;
 }
 
 /* give title a smaller font if the title is 20 chars or more */
